--- a/doc/demuxers.texi
+++ b/doc/demuxers.texi
@@ -384,7 +384,7 @@ Default is 0, the first language unit.
 
 @item menu_vts @var{int}
 The VTS where the menu lives, or 0 if it is a VMG menu (root-level).
-Default is 0, VMG menu.
+Default is 1, the menu in the first VTS.
 
 @item pgc @var{int}
 The entry PGC to start playback, in conjunction with @option{pg}.
@@ -396,17 +396,16 @@ Default is 0, automatically resolve from value of @option{title}.
 @item pg @var{int}
 The entry PG to start playback, in conjunction with @option{pgc}.
 Alternative to setting @option{title}.
-Chapter markers are not supported at this time.
-Default is 0, automatically resolve from value of @option{title}, or
-start from the beginning (PG 1) of the menu.
+This option is ignored without @option{pgc}.
+Default is the first PG segment of the PGC (PG 1).
 
 @item preindex @var{bool}
 Enable this to have accurate chapter (PTT) markers and duration measurement,
 which requires a slow second pass read in order to index the chapter marker
-timestamps from NAV packets. This is non-ideal extra work for real optical drives.
+timestamps from NAV packets. This also enables chapter markers on menus.
+The drawback is that this adds busy work for real optical drives.
 It is recommended and faster to use this option with a backup of the DVD structure
 stored on a hard drive. Not compatible with @option{pgc} and @option{pg}.
-Not applicable to menus.
 Default is 0, false.
 
 @item trim @var{bool}
